# AoC_2022

./: CMakeLists.txt
Day1/: day1.cpp
Day10/: day10.cpp
Day12/: day12.cpp
Day13/: day13.cpp
Day14/: day14.cpp
Day15/: day15.cpp
Day2/: day2.cpp
Day3/: day3.cpp
Day4/: day4.cpp
Day5/: day5.cpp
Day6/: day6.cpp
Day7/: day7.cpp
Day8/: day8.cpp
Day9/: day9.cpp
Meilisearch/: meilisearch.cpp  tree.txt
