cmake_minimum_required(VERSION 3.24)
cmake_policy(SET CMP0054 NEW)

project("AoC2022")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "-W4 -WX -EHsc")
else()
    set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wshadow -Wconversion -Wpedantic -Werror")
endif()


add_executable(Day1 ./Day1/day1.cpp)
add_executable(Day2 ./Day2/day2.cpp)
add_executable(Day3 ./Day3/day3.cpp)
add_executable(Day4 ./Day4/day4.cpp)
add_executable(Day5 ./Day5/day5.cpp)
add_executable(Day6 ./Day6/day6.cpp)
add_executable(Day7 ./Day7/day7.cpp)
add_executable(Day8 ./Day8/day8.cpp)
add_executable(Day9 ./Day9/day9.cpp)
add_executable(Day10 ./Day10/day10.cpp)
add_executable(Day12 ./Day12/day12.cpp)
add_executable(Day13 ./Day13/day13.cpp)
add_executable(Day14 ./Day14/day14.cpp)
add_executable(Day15 ./Day15/day15.cpp)
add_executable(Meilisearch ./Meilisearch/meilisearch.cpp)
